--- a/Letter Markup/index.html
+++ b/Letter Markup/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8">
     <meta name="author" content="Emma West">
     <title>Awesome Science Application Correspondence</title>
+    <style>
+        html {
+font-size: 16px;
+}
+body {
+max-width: 800px;
+margin: 0 auto;
+}
+.sender-column {
+text-align: right;
+}
+h1 {
+font-size: 1.5rem;
+}
+h2 {
+font-size: 1.3rem;
+}
+p, ul, ol, dl, address {
+font-size: 1.1rem;
+}
+p, li, dd, dt, address {
+line-height: 1.5;
+}
+address {
+font-style: normal;
+margin: 1rem 0;
+}
+    </style>
 </head>Re: Eileen Dover university application
 <body>
     <!-- Sender Address -->
@@ -14,10 +42,9 @@
         USA<br> 
         Tel: 123-456-7890<br> 
         Email: no_reply@example.com
-        <p>20 January, 2016</p>
     </address>
-
-    <!-- Recipeint Address -->
+    <p> class="<sender-column>20 January, 2016</p>
+     <!-- Recipeint Address -->
     <address> 
         Miss Eileen Dover<br>
         4321 Cliff Top Edge<br>
