--- a/plantets-table /planets-table/index.html
+++ b/plantets-table /planets-table/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Emma West">
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -16,11 +16,20 @@
             
             <!-- Add the table element. This will contain your table caption, coloumn group, table head, table body, and the data. -->
 <table>
-    <caption></caption>
+    <caption> Data about the planets of our solar system (Planetary facts taken from <a href="https://nssdc.gsfc.com")/caption>
     <colgroup>
+        <col span="2" title="Planet groups">
+        <col title="Planet names">
         <col title="Mass">
         <col title="Diameter">
         <col title="Distance">
+        <col title="Gravity">
+        <col title="Length of Day">
+        <col title="Distance from Sun">
+        <col title="Mean temperature">
+        <col title="Number of moons">
+        <col title="Notes">
+        <col title="Images"> 
     </colgroup>
     <thead>
         <tr>
