--- a/Letter Markup/index.html
+++ b/Letter Markup/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Emma West">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=""author" content="Emma West">
     <title>Awesome Science Application Correspondence</title>
     <style>
         html {
@@ -53,7 +54,10 @@ margin: 1rem 0;
     </address>
     <!-- Salutation -->
     <h1>Re: Eileen Dover </h1>
-    <p></p>
+    <p>Dear Eileen,</p>
+    <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.</p>
+    <p>Starting dates</p>
+    <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
 
  <style>
 
