--- a/plantets-table /index.html
+++ b/plantets-table /index.html
@@ -6,7 +6,20 @@
         <meta name="author" content="Emma West">
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
+    body, html {
+        height: 100%; 
+      }
+      .bg { 
+        background-image: url("img_planets.png");
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+  
+      }
+  }
     <body>
+    
 
         <!-- Wrap the top-level heading in a header element -->
         
