--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -6,19 +6,20 @@
     <meta name="author" content="Emma West">
     <title>Awesome Science Application Correspondence</title>
     <style>
+        body, html {
+            height: 100%;
+        }
 
-      body, html {
-
-    height: 100%;
-};
-
-.bg {
-    background-image: url("img_lettermarkup.png");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-</style>
+        .bg {
+            background-image: url("img_lettermarkup.png");
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
+<body>
+    <!-- Your HTML content goes here -->
+</body>
 </html>
