--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -11,11 +11,11 @@
         }
 
         .bg {
-            background-image: url("img_lettermarkup.png");
+            image: url("img_lettermarkup.png");
             height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            border-image-width: center;
+            border-image-repeat: no-repeat;
+            image-rendering: cover;
         }
     </style>
 </head>
