--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <img src="lettermarkup.png" alt="Full-Screen Image">
+    <img src="lettermarkup.png" alt="Half-Screen Image">
 </body>
 </html>
