--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Science Application</title>
-    <author>Emma West</author>
+    <title>Awesome Science Application </title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
+            display: flex;
+            height: 100vh; /* Ensure the body takes up the full height of the viewport */
         }
 
         img {
-            width: 100%;
-            height: 100%;
+            width: 50%; /* Adjust as needed */
+            height: 100vh; /* Ensure the image takes up the full height of the viewport */
             object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
         }
     </style>
 </head>
 <body>
     <img src="lettermarkup.png" alt="Half-Screen Image">
+    <!-- Add more content if needed -->
 </body>
 </html>
+
