--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Science Application </title>
+    <title>Awesome Science Application</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
             display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100vh; /* Ensure the body takes up the full height of the viewport */
         }
 
         img {
             width: 50%; /* Adjust as needed */
-            height: 100vh; /* Ensure the image takes up the full height of the viewport */
-            object-fit: cover;
+            height: auto; /* Maintain the image's aspect ratio */
+            max-height: 100%; /* Ensure the image doesn't exceed the height of the viewport */
         }
     </style>
 </head>
 <body>
-    <img src="lettermarkup.png" alt="Half-Screen Image">
+    <img src="lettermarkup.png" alt="Centered Half-Screen Image">
     <!-- Add more content if needed -->
 </body>
 </html>
-
