--- a/plantets-table /index.html
+++ b/plantets-table /index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img src="planets.png" alt="Centered Half-Screen Image">
+    <img src="planets_data.txt" alt="Centered Half-Screen Image">
     <!-- Add more content if needed -->
 </body>
 </html>
