--- a/plantets-table /index.html
+++ b/plantets-table /index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <img src="planets.jpg" alt="Planets in the Solar System">
+    <img src="uranus.jpg" alt="Full-Screen Image">
 </body>
 </html>
