--- a/plantets-table /index.html
+++ b/plantets-table /index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planets Table</title>
+    <title>Planets Information</title>
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            padding: 0;
         }
 
         img {
-            width: 100vw;
-            height: 100vh;
-            object-fit: cover;
+            width: 50vw; /* Set the width to 50% of the viewport width */
+            height: auto; /* Maintain the aspect ratio */
+            display: block; /* Remove any default inline spacing */
+            margin: 0 auto; /* Center the image horizontally */
         }
     </style>
 </head>
 <body>
-    <img src="uranus.jpg" alt="Full-Screen Image">
+    <img src="planets-table.png" alt="Half-Size Image">
 </body>
 </html>
